Fixed front unalignment

--- a/resource/labeling-app/style.css
+++ b/resource/labeling-app/style.css
@@ -232,17 +232,15 @@ canvas {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 15px;
 }
 
-.category-selector--categories .empty-annotations-placeholder{
-    top: 50%; transform: translateY(-50%)
-}
 .category-selector--categories {
-    align-content: flex-start;
+    align-content: center;
     margin-left: -5px;
     margin-right: -5px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     flex-wrap: wrap;
     flex: 1;
